# fscl-xtofu-c

./: README.md  appveyor.yml  meson.build  meson_options.txt
.circleci/: config.yml
.github/: .gitattributes  .gitignore  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_pipeline.yaml  ci_support.yaml  meson_ci.yml
code/include/: meson.build
code/include/fossil/: errors.h  limits.h  xtofu.h
code/include/fossil/xtofu/: core.h
code/source/: core.c  meson.build  xtofu.c
subprojects/: fscl-xtest-c.wrap
test/: generate-runner.py  meson.build  xtest_cases.c  xunit_runner.c
